# data-engineering-utokyo

./: .gitignore  README.md  setup.cfg  setup.py
data/: all_data.csv
data/result_sample/: Frequency_scan_data.csv  image_analysis.csv  parameter.xlsx  ssd_analysis.csv
data/sample/: 20211112-20211113.xlsx  HeaterLog_20220314_100740_00001.csv  IonBeamControl1.5_DESKTOP-8ICG2TJ_20220314_114132.csv  coil_log.txt
data/unittest/: coil.txt  coil_short.txt  gauge.csv  gauge_short.csv  heater.csv  heater_short.csv  image.csv  ion.csv  ion_short.csv  laser.lta  laser_short.lta  pmt.csv  pmt_short.csv  ssd.csv  ssd_long.csv  ssd_short.csv
docs/: requirements.txt
docs/source/: algorithms.rst  analyses.rst  conf.py  constants.rst  data.rst  index.rst  notebooks.rst  recorders.rst  utilities.rst
main/: main.py  main_j5.py
notebooks/: data_exploration.ipynb  laser_room_analysis.ipynb  result_exploration.ipynb
src/: constants.py  main.py  mot_constants.py  mot_constants_cmos.py
src/analyses/: analysis.py  fit_mot_number.py  image_analysis.py  mkdir.py  path_helper.py  peak.py  peak_finder.py  pmt_analysis.py  runner.py  runner_j5.py  simulation_analysis.py  ssd_analysis.py  ssd_histogram_analysis.py
src/constants/: constants.py  mot_constants.py  mot_constants_cmos.py
src/data_eng_utokyo/: algorithms.py  analyses.py  constants.py  recorders.py  utilities.py
src/notebooks/: beamtime_analysis.ipynb  beamtime_ssd_analysis.ipynb  cmos_exploration.ipynb  laser_room_analysis.ipynb  recorder_demo.ipynb  source_union.ipynb  (+1 more)
tests/: test_recorders.py
(+52 files in other folders)
