[metadata]
name = data-eng-utokyo
version = 0.1.0
author = R. Wixinger, S. Nagase, N. Ozawa
author_email = roman.wixinger@gmail.com
description = Data Engineering for the EDM Search at the University of Tokyo
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://readthedocs.org/projects/data-engineering-utokyo/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
package_dir =
    = src
packages =
    data_eng_utokyo
    data_eng_utokyo._recorders
    data_eng_utokyo._analyses
    data_eng_utokyo._utilities
    data_eng_utokyo._algorithms

python_requires = >=3.9
install_requires =
    numpy>=1.21
    pandas>=1.4.0
    scipy>=1.9
    matplotlib>=3.5
    pylatexenc

[options.packages.find]
where = src

[options.extras_require]
demo =
    jupyter
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7
    sphinx-autoapi
